src/objects/SomTv_KundeAgenturBeziehung__c.object
<CustomObject>
    <fields>
        <fullName>Agentur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agentur</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Beziehungen (Agentur)</relationshipLabel>
        <relationshipName>Kontaktbetreuer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agenturverbund__c</fullName>
        <formula>Agentur__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agenturverbund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_AgenturProRexID__c</fullName>
        <formula>Agentur__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWH Agentur ProRexID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Agenturverbund_ProRexID__c</fullName>
        <formula>Agentur__r.Parent.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWH Agenturverbund ProRexID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Konzern_ProRexID__c</fullName>
        <formula>Kunde__r.Parent.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWH Konzern ProRexID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_KundenProRexID__c</fullName>
        <formula>Kunde__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DWH Kunden ProRexID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GueltigBis__c</fullName>
        <description>Bis wann ist diese Kd.-Agentur-Beziehung gültig?</description>
        <inlineHelpText>Bis wann ist diese Kd.-Agentur-Beziehung gültig?</inlineHelpText>
        <label>gültig bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GueltigVon__c</fullName>
        <description>Ab wann ist diese Kd.-Agentur-Beziehung gültig?</description>
        <inlineHelpText>Ab wann ist diese Kd.-Agentur-Beziehung gültig?</inlineHelpText>
        <label>gültig von</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Konzern__c</fullName>
        <formula>Kunde__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Konzern</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kunde__c</fullName>
        <label>Kunde</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Beziehungen (Kunde)</relationshipLabel>
        <relationshipName>AnsprechpartnerZustaendigkeiten</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Beschreibung__c</fullName>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomTv_DWH_VKZID_SF__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>DWH_VKZID_SF</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SomTv_DWH_VKZID__c</fullName>
        <externalId>true</externalId>
        <label>DWH_VKZID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomTv_Kundenart__c</fullName>
        <formula>Text( Kunde__r.SomTv_Accounttypen__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kundenart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_RelevanteBeziehung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Kennzeichnet die für diesen Account relevante Beziehung, um die richtigen Ansprechpartner identifizieren zu können.</description>
        <inlineHelpText>Kennzeichnet die für diesen Account relevante Beziehung, um die richtigen Ansprechpartner identifizieren zu können.</inlineHelpText>
        <label>Relevante Beziehung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>UniqueKey</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Beziehung</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Kunde__c</columns>
        <columns>Agentur__c</columns>
        <columns>GueltigVon__c</columns>
        <columns>GueltigBis__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>BeziehungsId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beziehungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Datum_Bis_nach_Datum_Von</fullName>
        <active>true</active>
        <description>Das Datum bis muss nach dem Datum von liegen.</description>
        <errorConditionFormula>GueltigVon__c &gt; GueltigBis__c</errorConditionFormula>
        <errorMessage>Bitte ein gültiges Datum nach dem Datum von eingeben.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_MehrAlsEineRelevanteKABeziehung</fullName>
        <active>true</active>
        <description>Überprüft auf Basis des Feldes Anzahl KA Beziehungen Analyse, ob mehr als eine relevante K-A Beziehung vorhanden ist</description>
        <errorConditionFormula>IF (
ISNEW() = TRUE  &amp;&amp;  SomTv_RelevanteBeziehung__c = TRUE &amp;&amp; Kunde__r.P7S1_AnzahlKABeziehungenRelevant__c = 1, TRUE,
  IF(ISNEW() = FALSE &amp;&amp;  ISCHANGED(SomTv_RelevanteBeziehung__c) = True &amp;&amp; SomTv_RelevanteBeziehung__c = True &amp;&amp; Kunde__r.P7S1_AnzahlKABeziehungenRelevant__c = 1, TRUE, FALSE)
   )</errorConditionFormula>
        <errorDisplayField>SomTv_RelevanteBeziehung__c</errorDisplayField>
        <errorMessage>&quot;Eine relevante Kundenagentur Beziehung ist bereits vorhanden. Es darf nur eine relevante K-A-Beziehung angelegt sein&quot;</errorMessage>
    </validationRules>
</CustomObject>